--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <p id="current-player">Current Player: 1</p>
     <div id="legend" class="legend"></div>
     <div id="board" class="board"></div>
     <button onclick="startGame()">Start Game</button>
